Add get envelope transactions route, test case, and doc
